--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,35 @@
-[zopeskel]
-template = plone
+[check-manifest]
+# Instruct check-manifest to not complain about missing these version
+# controlled files in the source distribution, or the other way
+# around: having files in the source distribution that are not version
+# controlled.
+ignore =
+    *.cfg
+    *.sh
+    .bowerrc
+    .coveragerc
+    .travis.yml
+    Dockerfile
+    LATEST
+    Makefile
+    docs/Makefile
+    docs/make.bat
+    pre-commit*
+    requirements.txt
+    uuid.txt
 
+[isort]
+# for details see
+# https://docs.plone.org/develop/styleguide/python.html#grouping-and-sorting
+force_alphabetical_sort = True
+force_single_line = True
+lines_after_imports = 2
+multi_line_output=3
+include_trailing_comma=True
+
+[flake8]
+exclude = bootstrap.py,docs,*.egg.,omelette
+max-complexity = 15
+max-line-length = 89
+inline-quotes = "
+ignore = C901,E203,W503
